aptosid-art-legacy (2015.01.10) UNRELEASED; urgency=medium

  * NOT RELEASED YET

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Tue, 21 Jul 2015 00:11:50 +0200

aptosid-art-legacy (2015.01.9) unstable; urgency=medium

  * nuke /etc/default/kdm.d/kdmtheme as well.
  * make sure to only nuke /etc/default/kdm.d/* files mentioning the
    corresponding release artwork.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Tue, 21 Jul 2015 00:09:42 +0200

aptosid-art-legacy (2015.01.8) unstable; urgency=medium

  * drop */theme-kde/aptosid-*.colors.
  * bootstrap.sh: fix whitespace.
  * bootstrap.sh: hook up *.postinst.in handling.
  * make sure to delete /etc/default/kdm.d/wallpaper when upgrading
    aptosid-art-kdm-* to an empty metapackage, so later kdm reinstallations
    won't fail starting kdm.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Mon, 20 Jul 2015 23:50:06 +0200

aptosid-art-legacy (2015.01.7) unstable; urgency=medium

  * drop actual kdm themes and pull in sddm and their corresponding sddm themes
    instead.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Mon, 20 Jul 2015 22:46:03 +0200

aptosid-art-legacy (2015.01.6) unstable; urgency=medium

  * s/kde-workspace-bin/plasma-workspace/.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 12 Jul 2015 01:33:57 +0200

aptosid-art-legacy (2015.01.5) unstable; urgency=medium

  * drop kdm themes as mandatory artwork package for KDE based flavours.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sat, 04 Jul 2015 03:18:37 +0200

aptosid-art-legacy (2015.01.4) unstable; urgency=medium

  * clean up transparency a bit more.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Thu, 02 Jul 2015 23:35:59 +0200

aptosid-art-legacy (2015.01.3) unstable; urgency=medium

  * fix preview generation for sddm themes.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Thu, 02 Jul 2015 23:20:19 +0200

aptosid-art-legacy (2015.01.2) unstable; urgency=medium

  * add aptosid-art-sddm-@CODENAME_SAFE@ as a hard dependency to