@@ -12,6 +12,6 @@ Build-Depends: debhelper (>= 9.20120115),
  libxml-parser-perl,
  fonts-dustin
 Standards-Version: 3.9.6
-Vcs-git: git://github.com/fullstory/aptosid-art-legacy.git
+Vcs-git: https://github.com/fullstory/aptosid-art-legacy.git
 Vcs-Browser: https://github.com/fullstory/aptosid-art-legacy
 
